# RS_Ball_Obs_detection

./: CMakeLists.txt  README.md  make.sh  run.sh
src/: vision_realsense.cpp  vision_realsense.py  vision_realsense2.cpp
